# IonoProbe

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
config/: config.json
ionoprobe/: GLOBAL_VARS.py  __init__.py  config.py  logger.py  main.py  main_old.py  paths.py
ionoprobe/connect/: aws.py  aws_connect.py  connect.py  data_connect.py  digisonde.py  download.py  goes.py  local.py  swpcNoaa.py  url_connect.py
ionoprobe/model/: digiPlain.py  image.py
ionoprobe/notebooks/: goes.ipynb
ionoprobe/tools/: datetools.py
src/: GLOBAL_VARS.py  main.py
