[project]
name = "IonoProbe"
version = "1.0.0"
authors = [
  { name="Javier Cebrián", email="jac.cebrian@gmail.com" },
]
description = "Ionospheric study tools"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/javicebri/IonoProbe/"
Issues = "https://github.com/javicebri/IonoProbe/issues"